<resources>
    <string name="app_name">NewsApp</string>
    <string name="exam_one">作业一</string>
    <string name="exam_two">作业二</string>
    <string name="exam_three">作业三</string>
    <string name="button_go">点击跳转</string>
    <string name="para_one">代码千万行，注释第一行</string>
    <string name="para_two">注释不规范，同事泪两行</string>

    <string name="login">登录成功，程序猿提醒您：</string>
    <string name="account_text">账号</string>
    <string name="password_text">密码</string>
    <string name="confirm_text">确认</string>
    <string name="cancel_text">取消</string>

    <string name="login_text">登录</string>
    <string name="reset_text">重置</string>

    <string name="adapter_activity">Adapter</string>

    <string name="news_activity">News</string>

    <string name="view_pager">View</string>
    <string name="fragment_one">首页Fragment</string>
    <string name="fragment_two">图片Fragment</string>
    <string name="fragment_three">天气Fragment</string>

    <string name="tab_menu_one">首页</string>
    <string name="tab_menu_two">好友</string>
    <string name="tab_menu_three">收藏</string>
    <string name="tab_menu_four">我</string>


</resources>
